Fixed issues with spacing

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -10,3 +10,15 @@ section #title h1 {
     text-align: left;
     letter-spacing: 0.05em;
 }
+
+code {
+    padding: 0px;
+}
+
+ul {
+    margin-bottom: 0px;
+}
+
+a {
+    border-bottom: 1px dashed #ffcc00;
+}
